views/js/previewer/provider/item/scss/inc/_previewer-layout.scss
.previewer, .previewer-component {
    position: relative;
}

.item-previewer-scope {

    position: relative;

    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;

    &.view-viewer {
        .action-bar {
            display: none;
        }
    }
    &:not(.view-viewer) {
        height: calc(100vh - #{(map-get($heights, header) + map-get($heights, footer)) * 1px});

        .test-sidebar {
            height: calc(100vh - #{(map-get($heights, header) + map-get($heights, footer) + map-get($heights, horizontal-action-bar) * 2) * 1px});
        }
    }

    .test-runner-sections {

        /* flex column value */
        -webkit-flex: 1 1 0%;
        -ms-flex: 1 1 0%;
        flex: 1 1 0%;

        overflow: hidden;

        /* is also a flex container */
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        -webkit-flex-direction: row;
        -ms-flex-direction: row;
        flex-direction: row;
    }

    .test-sidebar {
        background: $canvas;

        /* side bars are supposed to have no width until they've got content */
        -webkit-flex: 0 1 auto;
        -ms-flex: 0 1 auto;
        flex: 0 1 auto;

        overflow-y: auto;

        max-width: 350px;
        & > .qti-panel {
            max-width: 350px;
            padding: 10px;
        }
        @media only screen and (max-device-width: 800px) {
            max-width: 200px;
            & > .qti-panel {
                max-width: 200px;
            }
        }
        @media only screen and (min-device-width: 800px) and (max-device-width: 1280px) {
            max-width: 250px;
            & > .qti-panel {
                max-width: 250px;
            }
        }
        @media only screen and (min-device-width: 1280px) and (max-device-width: 1440px) {
            max-width: 300px;
            & > .qti-panel {
                max-width: 300px;
            }
        }
    }
    .test-sidebar-left {
        border-right: 1px $uiGeneralContentBorder solid;
    }

    .test-sidebar-right {
        border-left: 1px $uiGeneralContentBorder solid;
    }

    .content-wrapper {
        position: relative;

        -webkit-flex: 1 1 0%;
        -ms-flex: 1 1 0%;
        flex: 1 1 0%;

        overflow: auto;

        padding: 0;

        .overlay {
            position: absolute;
            left: 0;
            right: 0;
            top: 0;
            bottom: 0;
            width: 100%;
            opacity: .9;

            &-full {
                background-color: $uiGeneralContentBg;
                opacity: 1;
            }
        }
    }

    #qti-content {
        -webkit-overflow-scrolling: touch;
        max-width: map-get($widths, item-max-width) * 1px;
        width: 100%;
        margin: auto;
    }

    #qti-item {
        width: 100%;
        min-width: 100%;
        height: auto;
        overflow: visible;
    }

    .qti-item {
        padding: 30px;
    }

    .qti-itemBody.writing-mode-vertical-rl {
        writing-mode: vertical-rl;
        padding: 15px;
        block-size: 100%;
        inline-size: 100%;
        overflow: auto;
        overscroll-behavior: contain;
        line-height: 1.8; /* assuming ruby tags */

        /* vertical writing mode is set for whole item, to fit wavy underlines and subscripts */
        .custom-text-box {
            padding-block-start: 12px;
        }
    }

    .qti-itemBody {
        /* vertical writing mode is set for A-block, to fit wavy underlines and subscripts */
        .writing-mode-vertical-rl {
            padding-block-start: 12px;
        }
    }

    .size-wrapper {
        max-width: map-get($widths, size-wrapper) * 1px;
        margin: auto;
        width: 100%;
        padding-right: 40px;
    }

    #qti-rubrics {
        margin: auto;
        max-width: map-get($widths, item-max-width) * 1px;
        width: 100%;
        .qti-rubricBlock {
            margin: 20px 0;
        }
        .hidden {
            display: none;
        }
    }
}

.no-controls .item-previewer-scope {
    height: 100vh;
}

.previewer-component {
    background: inherit;

    &.fullpage {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        z-index: 100000;

        .item-previewer-scope {
            height: 100vh;
        }
    }

    &.readonly {
        .qti-item::before {
            content: ' ';
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            z-index: 100000;
        }
    }

    &.hideactionbars {
        .test-sidebar {
            height: 100%;
        }

        .action-bar {
            display: none;
        }
    }
}

.item-writing-mode-vertical-rl {
    .item-previewer-scope {
        .qti-item {
            padding: 15px;
        }
    }
}

